<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="72dp"
        android:layout_height="91dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/Alogo"
        app:srcCompat="@drawable/ic_app_icon" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/button4"
        android:layout_marginTop="148dp"
        android:text="@string/Forgot"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/imageView7"
        android:layout_marginTop="196dp"
        android:text="@string/forgotText"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="349dp"
        android:layout_height="47dp"
        android:layout_centerInParent="true"
        android:background="@drawable/text_bg"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/button4"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="216dp"
        android:background="@drawable/button_blue_bg"
        android:text="@string/reset_password"
        android:textColor="#fff"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="Don't have an account?"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Sign Up"
            android:layout_marginStart="2dp"
            android:textColor="@color/figmaBlue"
            android:textSize="16sp" />
    </LinearLayout>

</android.widget.RelativeLayout>