<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/que"
        android:text="@string/quest3"
        android:textAlignment="center"
        android:textSize="20sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5"
        android:gravity="center"
        android:layout_marginTop="10dp">
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/affirm3"
        android:layout_weight="1"
        android:background="@drawable/button_bg"
        android:text="Yes"
        android:textColor="@color/figmaBlue"
        android:textSize="18sp"
        android:padding="4dp"
        android:textAllCaps="false"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="Yes"
            android:textColor="@color/figmaBlue"
            android:textSize="18sp"
            android:padding="4dp"
            android:textAllCaps="false"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/neg3"
        android:layout_weight="1"
        android:background="@drawable/button_bg"
        android:text="No"
        android:textColor="@color/figmaBlue"
        android:textSize="18sp"
        android:padding="4dp"
        android:textAllCaps="false"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/que4"
        android:text="@string/quest4"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5"
        android:gravity="center"
        android:layout_marginTop="10dp">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/affirm4"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="Yes"
            android:textColor="@color/figmaBlue"
            android:textSize="18sp"
            android:padding="4dp"
            android:textAllCaps="false"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="Yes"
            android:textColor="@color/figmaBlue"
            android:textSize="18sp"
            android:padding="4dp"
            android:textAllCaps="false"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/neg4"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="No"
            android:textColor="@color/figmaBlue"
            android:textSize="18sp"
            android:padding="4dp"
            android:textAllCaps="false"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/que5"
        android:text="@string/quest5"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5"
        android:gravity="center"
        android:layout_marginTop="10dp">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/affirm5"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="Yes"
            android:textColor="@color/figmaBlue"
            android:textSize="18sp"
            android:padding="4dp"
            android:textAllCaps="false"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="Yes"
            android:textColor="@color/figmaBlue"
            android:textSize="18sp"
            android:padding="4dp"
            android:textAllCaps="false"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/neg5"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="No"
            android:textColor="@color/figmaBlue"
            android:textSize="18sp"
            android:padding="4dp"
            android:textAllCaps="false"/>
    </LinearLayout>
</LinearLayout>